# navigation_position_refinement

./: CMakeLists.txt  README.md  package.xml
action/: BlindMovement.action  PositionRefinement.action  position_refinement.action
include/navigation_position_refinement/: Parameters.h
launch/: pr2_position_refinement.launch  static_transform.launch
src/: blind_movement.cpp  position_refinement_node.cpp  temp_.txt  test_node.cpp
